--- a/RestaurantManager.API/RestaurantManager.API/appsettings.Development.json
+++ b/RestaurantManager.API/RestaurantManager.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "RestaurantManagerDatabase": "Data Source=SLU-BRJ143QT0Z\\SQLEXPRESS; Initial Catalog=EXAMPLE; Integrated Security=True;TrustServerCertificate=True"
+    "RestaurantManagerDatabase": "Data Source=LOCALHOST\\SQLEXPRESS; Initial Catalog=EXAMPLE; Integrated Security=True;TrustServerCertificate=True"
   }
 }
